[gd_scene load_steps=2 format=3 uid="uid://b6wj8m8jdv7ks"]

[ext_resource type="Script" path="res://conversation.gd" id="1_mfhgd"]

[node name="Conversation" type="Node2D"]
script = ExtResource("1_mfhgd")

[node name="SpeakerPortraitR" type="Sprite2D" parent="."]
position = Vector2(1524, 410)

[node name="SpeakerPortraitL" type="Sprite2D" parent="."]
position = Vector2(406, 410)

[node name="Speech" type="ColorRect" parent="."]
offset_left = 98.0
offset_top = 578.0
offset_right = 1822.0
offset_bottom = 982.0
color = Color(0, 0, 0, 1)
metadata/_edit_group_ = true

[node name="BG" type="ColorRect" parent="Speech"]
layout_mode = 0
offset_left = 2.0
offset_top = 2.0
offset_right = 1722.0
offset_bottom = 402.0

[node name="Text" type="RichTextLabel" parent="Speech/BG"]
layout_mode = 0
offset_left = 100.0
offset_top = 50.0
offset_right = 1620.0
offset_bottom = 350.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 36
text = "test dialogue"
visible_characters = 0
visible_ratio = 0.0

[node name="Prompt1" type="ColorRect" parent="."]
visible = false
offset_left = 460.0
offset_top = 150.0
offset_right = 1460.0
offset_bottom = 225.0
color = Color(0, 0, 0, 1)
metadata/_edit_group_ = true

[node name="BG" type="ColorRect" parent="Prompt1"]
layout_mode = 0
offset_left = 2.0
offset_top = 2.0
offset_right = 998.0
offset_bottom = 73.0

[node name="Prompt" type="RichTextLabel" parent="Prompt1/BG"]
layout_mode = 0
offset_left = 52.0
offset_top = 5.0
offset_right = 948.0
offset_bottom = 66.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 36
text = "test dialogue"
visible_characters = 0
visible_ratio = 0.0

[node name="Prompt2" type="ColorRect" parent="."]
visible = false
offset_left = 460.0
offset_top = 300.0
offset_right = 1460.0
offset_bottom = 375.0
color = Color(0, 0, 0, 1)
metadata/_edit_group_ = true

[node name="BG" type="ColorRect" parent="Prompt2"]
layout_mode = 0
offset_left = 2.0
offset_top = 2.0
offset_right = 998.0
offset_bottom = 73.0

[node name="Prompt" type="RichTextLabel" parent="Prompt2/BG"]
layout_mode = 0
offset_left = 52.0
offset_top = 5.0
offset_right = 948.0
offset_bottom = 66.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 36
text = "test dialogue"
visible_characters = 0
visible_ratio = 0.0

[node name="Prompt3" type="ColorRect" parent="."]
visible = false
offset_left = 460.0
offset_top = 450.0
offset_right = 1460.0
offset_bottom = 525.0
color = Color(0, 0, 0, 1)
metadata/_edit_group_ = true

[node name="BG" type="ColorRect" parent="Prompt3"]
layout_mode = 0
offset_left = 2.0
offset_top = 2.0
offset_right = 998.0
offset_bottom = 73.0

[node name="Prompt" type="RichTextLabel" parent="Prompt3/BG"]
layout_mode = 0
offset_left = 52.0
offset_top = 5.0
offset_right = 948.0
offset_bottom = 66.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 36
text = "test dialogue"
visible_characters = 0
visible_ratio = 0.0

[node name="SpeakerR" type="ColorRect" parent="."]
visible = false
offset_left = 1318.0
offset_top = 548.0
offset_right = 1722.0
offset_bottom = 602.0
color = Color(0, 0, 0, 1)
metadata/_edit_group_ = true

[node name="BG" type="ColorRect" parent="SpeakerR"]
layout_mode = 0
offset_left = 2.0
offset_top = 2.0
offset_right = 402.0
offset_bottom = 52.0

[node name="Name" type="RichTextLabel" parent="SpeakerR/BG"]
layout_mode = 0
offset_right = 400.0
offset_bottom = 53.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 36
bbcode_enabled = true

[node name="SpeakerL" type="ColorRect" parent="."]
visible = false
offset_left = 198.0
offset_top = 548.0
offset_right = 602.0
offset_bottom = 602.0
color = Color(0, 0, 0, 1)
metadata/_edit_group_ = true

[node name="BG" type="ColorRect" parent="SpeakerL"]
layout_mode = 0
offset_left = 2.0
offset_top = 2.0
offset_right = 402.0
offset_bottom = 52.0

[node name="Name" type="RichTextLabel" parent="SpeakerL/BG"]
layout_mode = 0
offset_right = 400.0
offset_bottom = 53.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 36
bbcode_enabled = true

[node name="TypeTimer" type="Timer" parent="."]
wait_time = 0.05

[connection signal="timeout" from="TypeTimer" to="." method="_on_type_timer_timeout"]
